--- a/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/app.component.html
+++ b/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/app.component.html
@@ -1,1 +1,3 @@
 <home-page></home-page>
+<!-- se renderiza primero la spa que refiere a menu-component, es una inyeccion
+del componente con el selector asociado -->
