--- a/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/semillero/componentes/menu/menu-component.html
+++ b/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/semillero/componentes/menu/menu-component.html
@@ -3,7 +3,7 @@
     <!-- Wrapper -->
     <div id="wrapper">
 
-        <!-- Main -->
+        <!-- Main -->       
         <div id="main">
             <div class="inner">
 
@@ -20,6 +20,8 @@
                     </ul>
                 </header>
                 <section style="padding: 1em 0 3em 0;">
+                    <!-- permite navegar entre vistas, 
+                        lee el archivo de enrutamiento para la renderización  -->
                     <router-outlet></router-outlet>
                 </section>
             </div>
