--- a/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/semillero/componentes/home/bienvenida-component.html
+++ b/semillero-hbt/semillero-padre/semillero-web/src/main/angular/src/app/semillero/componentes/home/bienvenida-component.html
@@ -1,4 +1,15 @@
-
-<img [src]="urlImagen" height="500" width="1000" (click)="ejecucionEventoClick('Diego alvarez', 323423)">
-<!-- <crear-persona></crear-persona> -->
-<input type="text" class="form-control-plaintext" id="staticEmail" [(ngModel)]="urlImagen" name="urlImagen">
+<img
+  [src]="urlImagen"
+  height="500"
+  width="1000"
+  (click)="ejecucionEventoClick('Diego alvarez', 323423)"
+/>
+<pre>{{comicDTO | json}}</pre>
+<crear-persona></crear-persona>
+<input
+  type="text"
+  class="form-control-plaintext"
+  id="staticEmail"
+  [(ngModel)]="urlImagen"
+  name="urlImagen"
+/>
